# concert_launcher

./: MANIFEST.in  README.md  deploy.bash  pyproject.toml  setup.cfg
config/: config_example.yaml
config/example_alaurenzi/: launcher.yaml
src/concert_launcher/: concert_launcher.bash  concert_launcher_wrapper.bash  config.py  executor.py  main.py  monitoring_session.py  print_ps_tree.py  print_utils.py  remote.py
src/concert_launcher/resources/: concert_launcher_print_ps_tree.py  concert_launcher_wrapper.bash
