[metadata]
name = concert_launcher
version = 0.1.0
author = Arturo Laurenzi
author_email = arturo.laurenzi@iit.it
description = A minimalistic tool to automate remote process launching with dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://none
project_urls =
    Bug Tracker = https://none
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.6
install_requires =
    argcomplete
    parse
    pyyaml
    fabric
    

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    concert_launcher = concert_launcher.main:main